--- a/index.html
+++ b/index.html
@@ -2,21 +2,40 @@
 <html>
 <head>
 	<title>Hernan Razo</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
-
-	<div class='header'> 
-		<a href='#title' class='title'>Hernan Razo</a>
-
-		
-		<div class='header-right'>
-			<a href='#about'>About Me</a>
-			<a href='#sites'>View My Work</a>
-			<a href='#contact'>Contact Me</a>
+	<div class="wrap">
+		<div class="title">
+			<h1>Hernan Razo</h1>
 		</div>
-	</div>
 
+		<div class="pic">
+			<img src="hernan_razo.jpg" style="width:380px; height:550px;">
+		</div>
 
+		<div class="aboutMe">
+			<h2>About Me</h2>
+
+			<p>My name is Hernan Razo. I am currently a student at the Illinois Institute of Technology in Chicago, Illinois. I am pursuing my bachelors and masters in computer science through the coterminal degree program.</p>
+			
+			<p>My current interests entail machine learning and artificial intelligence. Through internships and personal projects, I have honed the skills needed to succeed in this field. These skills include data analysis, machine learning, neural network architecture, python programming, natural language processing, computer vision, and CI/CD.</p>
+
+			<p>Currently, I am looking for full time employment opportunities in data science and machine learning.</p>
+			
+		</div>
+
+		<div class="contactMe">
+			<h3>Contact Me</h3>
+			<ul>
+				<li><a>hernanrazo(at)gmail(dot)com</a></li>	
+				<li><a href="https://github.com/hrazo7">GitHub</a></li>
+				<li><a href="https://www.linkedin.com/in/hernan-razo/">LinkedIn</a></li>		
+			</ul>
+		</div>
+		
+		</div>
+	
 </body>
 </html>
