--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Hernan Razo</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="shortcut icon" type="image/c-icon" href=images/favicon.ico>
 </head>
 
 <body>
@@ -12,7 +13,7 @@
 		</div>
 
 		<div class="pic">
-			<img src="hernan_razo.jpg" style="width:380px; height:550px;">
+			<img src="images/hernan_razo.jpg" style="width:380px; height:550px;">
 		</div>
 
 		<div class="aboutMe">
