--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Hernan Razo</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -19,23 +19,22 @@
 		<div class="aboutMe">
 			<h2>About Me</h2>
 
-			<p>My name is Hernan Razo. I am currently a student at the Illinois Institute of Technology in Chicago, Illinois. I am pursuing my bachelors and masters in computer science through the coterminal degree program.</p>
+			<p>Hello! My name is Hernan Razo. I am currently a student at the Illinois Institute of Technology in Chicago, Illinois. I am pursuing my bachelors and masters in computer science through the coterminal degree program.</p>
 			
-			<p>My current interests entail machine learning and artificial intelligence. Through internships and personal projects, I have honed the skills needed to succeed in this field. These skills include data analysis, machine learning, neural network architecture, python programming, natural language processing, computer vision, and CI/CD.</p>
+			<p>My current interests entail artificial intelligence and computer vision. Through internships and personal projects, I have honed the skills needed to succeed in this field. These skills include data analysis, deep learning learning, neural network architecture, python programming, computer vision algorithms, and CI/CD.</p>
 
-			<p>Currently, I am looking for full time employment opportunities in data science and machine learning.</p>
+			<p>On my free time, I like to ride my fixie around Chicago, read, medidate, lose money in the stock market, and make ugly personal websites.</p>
+
+			<p>Currently, I am looking for full time employment opportunities in machine learning.</p>
 			
 		</div>
-
 		<div class="contactMe">
 			<h3>Contact Me</h3>
-			<ul>
-				<li><a>hernanrazo(at)gmail(dot)com</a></li>	
-				<li><a href="https://github.com/hrazo7">GitHub</a></li>
-				<li><a href="https://www.linkedin.com/in/hernan-razo/">LinkedIn</a></li>		
-			</ul>
+			<li><a>hernanrazo(at)gmail(dot)com</a></li>
+			<li><a href="https://drive.google.com/file/d/1w_pTOzjZ6giUVh96vhGyyAuVk0_ioqV6/view?usp=sharing">Download my resume!</a></li>
+			<li><a href="https://github.com/hernanrazo">GitHub</a></li>
+			<li><a href="https://www.linkedin.com/in/hernan-razo/">LinkedIn</a></li>		
 		</div>
-		
 		</div>
 	
 </body>
